# cpp_starter

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.scripts/: build.sh  configure.sh  format.sh  package.sh  test.sh  tidy.sh  ycm.sh
src/: CMakeLists.txt
src/cmake/: Externals.cmake
src/cpp_exe/: CMakeLists.txt  main.cpp
src/cpp_lib/: CMakeLists.txt
src/cpp_lib/tests/: CMakeLists.txt
src/cpp_lib/wrapper/: CMakeLists.txt
src/greeter/: CMakeLists.txt  greeter.cpp  greeter.hpp
src/greeter/api/: CMakeLists.txt  greeter_api.cpp  greeter_api.h
src/greeter/benchmarks/: CMakeLists.txt  greeter_benchmarks.cpp
src/greeter/tests/: CMakeLists.txt  greeter_api_tests.cpp  greeter_tests.cpp
src/greeter_cli/: CMakeLists.txt  main.cpp
src/greeter_exe/: CMakeLists.txt  main.cpp
src/greeter_gui/: CMakeLists.txt  greeter_window.cpp  greeter_window.h  greeter_window.ui  main.cpp
src/greeter_lib/: CMakeLists.txt  greeter_impl.cpp  greeter_impl.hpp
src/greeter_lib/benchmarks/: CMakeLists.txt  greeter_benchmarks.cpp
src/greeter_lib/tests/: CMakeLists.txt  greeter_impl_tests.cpp  greeter_lib_tests.cpp
src/greeter_lib/wrapper/: CMakeLists.txt  greeter.cpp  greeter.h
src/greeter_server/: CMakeLists.txt  main.cpp
